# node-libobs

./: .gitignore  Cargo.toml  README.md  build.rs  child.js  package-lock.json  package.json  test.js
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/obs/: mod.rs  obs.rs  sys.rs
src/obs/data/: inner_obs_property.rs  loaded_obs_module.rs  mod.rs  obs_data.rs  obs_module.rs  obs_properties.rs  obs_property.rs  obs_property_type.rs  obs_settings.rs
src/obs/io/: mod.rs  obs_encoder.rs  obs_output.rs  obs_source.rs
src/obs/objects/: failed_obs_module.rs  mod.rs  obs_options.rs  reset_audio_data.rs  reset_video_data.rs
src/obs/traits/: enum_value.rs  from_raw.rs  mod.rs  raw.rs
src/obs/util/: mod.rs  napi_error.rs  node_util.rs  obs_error.rs  obs_guard.rs  types.rs
