[package]
edition = "2021"
name = "libobs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.9.1", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2.9.1"
strum_macros = "0.24.3"
futures = "0.3.24"
tokio = "1.2.0"

[build-dependencies]
napi-build = "2.0.1"
bindgen = "0.60.1"

[profile.release]
lto = true
